[metadata]
name = igneous-pipeline
url = https://github.com/seung-lab/igneous/
summary = Downsample, Mesh, Skeletonize, and Remap Neuroglancer Datasets
description-file =
    README.md
author = Ignacio Tartavull, William Silversmith, and others
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/igneous/
license=License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: Scientific/Engineering :: Image Processing

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = 
	igneous
	igneous_cli

[wheel]
universal = 0