[metadata]
name = igneous-pipeline
url = https://github.com/seung-lab/igneous/
summary = Manage, Downsample, Mesh, Skeletonize, and Transform Neuroglancer Datasets
description_file =
    README.md
long_description_content_type = text/markdown
author = Ignacio Tartavull, William Silversmith, and others
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/igneous/
license=License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
    Topic :: Scientific/Engineering :: Image Processing

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = 
	igneous
	igneous_cli

[wheel]
universal = 0